samples/_failures_safe/1761216280_43ee90_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed968a7a.c: In function ‘main’:
./samples/SAFE/__tmp_ed968a7a.c:173:9: error: expected expression at end of input
  173 |         if (scanf("%d %d %d", &from, &to,
      |         ^~
./samples/SAFE/__tmp_ed968a7a.c:173:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed968a7a.c:173:9: error: expected declaration or statement at end of input
